--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@ University of British Columbia, Vancouver.
 <span class = "hidden">
   <span id = "intro2_head">SOWN SEEDS&#X1F339</span> <br>
 I grew up in Toronto. In my youth, I was unsure
-if going to university was right for me, and envisioning becoming an 
+if going to university was right for me. Envisioning becoming an 
 "academic" or a "scientist" was unrealistic.
 But, I longed for it, and this prospect became 
 more and more conceivable through my undergrad journey.
