--- a/about.html
+++ b/about.html
@@ -83,9 +83,8 @@ more and more conceivable through my undergrad journey.
 <span class = "hidden">
 <span id = "intro2_head">DRIVE AND DIRECTION &#x1F699</span> <br>
 I am passionate about the craft and rigour at each stage of the research process, from conceptualization
-to analysis & writing to public outreach. My goal is to advance our
-knowledge of human behavior, reduce harms associataed with digital technology
-use, and inform evidence-based policies. <br><br>
+to analysis & writing to public outreach. My goals are to advance our
+knowledge of human behavior, reduce harms associataed with digital products, and inform evidence-based policies. <br><br>
 </span>
 
 <span class = "hidden">
@@ -102,7 +101,7 @@ class = "aboutlink">PDF</a>) in hopes that it will be helpful for prospective gr
 One of my favorite part of work is collaborating with people, 
 especially in environments that foster 
  challenge and creativitiy as well as safety and inclusivity, whether it's for
- research, teaching, or public outreach. If anything catches your attention, 
+ research, teaching, or public outreach. If something catches your attention, 
  feel free to reach out.
 </span>
 
