--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
 
     <p id = "intro_t"> 
 
-<span id = "hi">Hi there, <br>I'm Raymond Wu. </span> <br><br>
+<span id = "hi">Hello there, <br>I'm Raymond Wu. </span> <br><br>
 
 <span id = "hi2">
 I'm a PhD student in the<a href= "https://psych.ubc.ca/graduate/research-streams/cognitive-science/" 
