--- a/work.html
+++ b/work.html
@@ -29,42 +29,8 @@
             
     <section id = "intro">
 
+      <div id = "intro_text">Coming Soon</div>
 
-<div class = "boxhold">
-
-  
-  
-  <div id = "box6" class = "boxes">
-    <p>Coming 2024</p></div>
-
-  
-  
-    <a href = "boredomcuriosity" class = "boxes" style = "text-decoration: none">
-      <div id = "box1">
-      <p class = box_text>Boredom and Curiosity<br>in Risky Decisions</p></div></a>
-
-  
-  
-    <a href = "gamblingstreams" class = "boxes" style = "text-decoration: none">
-      <div id = "box1">
-      <p class = box_text>Emotional Effects of<br>Gambling Livestreams</p></div></a>
-
-  
-  
-    <a href = "rationalizations" class = "boxes" style = "text-decoration: none">
-      <div id = "box1">
-      <p class = box_text>Rationalizations in<br>Disordered Gambling</p></div></a>
-
-  
-    <a href = "mentaleffort" class = "boxes" style = "text-decoration: none">
-      <div id = "box1">
-      <p class = box_text>Mental Effort v<br>Doing Nothing</p></div></a>
-
-  <a href = "strategies" class = "boxes" style = "text-decoration: none">
-    <div id = "box1">
-    <p class = box_text>Cognitive Strategies<br>for Goal Pursuit</p></div></a>
-
-</div>
         </section>
 
         <div class = "space"></div>
