--- a/about.html
+++ b/about.html
@@ -82,8 +82,8 @@ more and more conceivable through my undergrad journey.
 
 <span class = "hidden">
 <span id = "intro2_head">DRIVE AND DIRECTION &#x1F699</span> <br>
-I am passionate about the craft and rigour at each stage of the research process, from conceptualization
-to analysis & writing to public outreach. My goals are to advance our
+I am passionate about the craft and rigour at each stage of the research process. 
+My goals are to advance our
 knowledge of human behavior, reduce harms associataed with digital products, and inform evidence-based policies. <br><br>
 </span>
 
