--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               </ul>
             </nav>
  <h1 id="name">Hi, I'm Ray</h1>
-            <h1 id="role">Cognitive Science PhD Student
+            <h1 id="role">Phd Fellow @ UBC Vancouver
                 </h1>
          
 
