--- a/about.html
+++ b/about.html
@@ -72,11 +72,10 @@ University of British Columbia, Vancouver.
 
 <span class = "hidden">
   <span id = "intro2_head">SOWN SEEDS&#X1F339</span> <br>
-I grew up in Toronto. In my youth, I was unsure
-if going to university was right for me. Envisioning becoming an 
-"academic" or a "scientist" was unrealistic.
-But, I longed for it, and this prospect became 
-more and more conceivable through my undergrad journey.
+In my youth, getting a university degree seemed unrealistic at times, let alone going to
+graduate school.
+But, I longed for it. With time, effort, and guidance, this prospect became
+more and more conceivable.
 <br><br>
 </span>
 
@@ -84,16 +83,16 @@ more and more conceivable through my undergrad journey.
 <span id = "intro2_head">DRIVE AND DIRECTION &#x1F699</span> <br>
 I am passionate about the craft and rigour at each stage of the research process. 
 My goals are to advance our
-knowledge of human behavior, reduce harms associataed with digital products, and inform evidence-based policies. <br><br>
+knowledge of human behavior, reduce harms associataed with digital products, and inform policies. <br><br>
 </span>
 
 <span class = "hidden">
 <span id = "intro2_head">RESEARCH ETHOS &#x1F496 </span><br>
-My work is rooted in transparency. This includes open science practices, having made all my 
+My work is rooted in transparency, including open science practices, having made my 
 articles and data publicy available (<a href= "https://www.osf.io/anm2z" target="_blank" rel = "noreferrer noopener" 
 class = "aboutlink">here</a>). My graduate school application
 materials are also shared (<a href= "gradmats" target="_blank" rel = "noreferrer noopener" 
-class = "aboutlink">PDF</a>) in hopes that it will be helpful for prospective graduate students.<br><br>
+class = "aboutlink">here</a>).<br><br>
 </span>
 
 <span class = "hidden">
@@ -101,8 +100,7 @@ class = "aboutlink">PDF</a>) in hopes that it will be helpful for prospective gr
 One of my favorite part of work is collaborating with people, 
 especially in environments that foster 
  challenge and creativitiy as well as safety and inclusivity, whether it's for
- research, teaching, or public outreach. If something catches your attention, 
- feel free to reach out.
+ research, teaching, or public outreach.
 </span>
 
 
