--- a/about.html
+++ b/about.html
@@ -1,8 +1,9 @@
 <html>
 <head>
     <title>Raymond Wu</title>
-    <link href="https://fonts.googleapis.com/css2?family=Jost&family=DM+Sans&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Baskervville&display=swap" rel="stylesheet">
+
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300" rel="stylesheet" type="text/css">
+
         <link rel="stylesheet" href="./style.css">
     <meta name="description" content="Hi there! I'm Raymond, a PhD student in Cognitive Science at the University of British Columbia.">
     <meta name="keywords" content="Raymond Wu">
@@ -16,8 +17,8 @@
           <ul class = "navlist" id = "nav">
             <li>
               <a href = "https://raymondwu.ca/" >RW</a></li>
-              <li><a href = "work">WORK</a></li>
-              <li><a href = "about">ABOUT</a></li>
+              <li><a href = "work">Work</a></li>
+              <li><a href = "about">About</a></li>
              <li><a href= "CV"
               target="_blank" rel = "noreferrer noopener"
               >CV</a></li>
@@ -43,12 +44,12 @@
 
     <p id = "intro_t"> 
 
-<span id = "hi">Hello there, <br>I'm Raymond Wu. </span> <br><br>
+<span id = "hi">Hi there, <br>I'm Raymond Wu. </span> <br><br>
 
 <span id = "hi2">
-I'm a PhD student in the<a href= "https://psych.ubc.ca/graduate/research-streams/cognitive-science/" 
+I'm a PhD student in <a href= "https://psych.ubc.ca/graduate/research-streams/cognitive-science/" 
 target="_blank" rel = "noreferrer noopener" 
-class = "aboutlink2"> Cognitive Science stream</a>, an <a href= "https://www.nserc-crsng.gc.ca/students-etudiants/pg-cs/cgsd-bescd_eng.asp" 
+class = "aboutlink2"> Cognitive Science</a>, an <a href= "https://www.nserc-crsng.gc.ca/students-etudiants/pg-cs/cgsd-bescd_eng.asp" 
 target="_blank" rel = "noreferrer noopener" 
 class = "aboutlink2">NSERC Doctoral Fellow</a>, and a member of the
 <a href= "https://cgr.psych.ubc.ca/" target="_blank" rel = "noreferrer noopener" 
@@ -71,33 +72,32 @@ University of British Columbia, Vancouver.
 <p id = "intro2_text">
 
 <span class = "hidden">
-<span id = "intro2_head">DRIVE AND DIRECTION &#x1F699</span> <br>
-I am passionate about the craft and rigour at each stage of the research process. 
-My goals are to advance our
-knowledge of human behavior, reduce harms associataed with digital products, and inform policies. <br><br>
+<span id = "intro2_head">Drive & Direction</span> <br>
+My research aims to improve our understanding of human decision-making and behavior,
+reduce harms associated with digital products, and inform evidence-based policies.
+
+<br><br>
 </span>
 
 <span class = "hidden">
-<span id = "intro2_head">RESEARCH ETHOS &#x1F496 </span><br>
-My work is rooted in transparency, including open science practices, having made my 
-articles and data publicy available (<a href= "https://www.osf.io/anm2z" target="_blank" rel = "noreferrer noopener" 
-class = "aboutlink">here</a>). My graduate school application
-materials are also shared (<a href= "gradmats" target="_blank" rel = "noreferrer noopener" 
-class = "aboutlink">here</a>).<br><br>
+<span id = "intro2_head">Research Ethos</span><br>
+My work is rooted in rigour and transparency. This includes open science practices,
+ having made our research and data 
+ <a href= "https://www.osf.io/anm2z" target="_blank" rel = "noreferrer noopener" 
+class = "aboutlink">publicly available</a>, many of which are preregistered. <br> <br>
 </span>
 
 <span class = "hidden">
-<span id = "intro2_head">WORKING TOGETHER &#x1F91D</span><br>
-One of my favorite part of work is collaborating with people, 
-especially in environments that foster 
- challenge and creativitiy as well as safety and inclusivity, whether it's for
- research, teaching, or public outreach.
+<span id = "intro2_head">Working Together</span><br>
+One of my favorite part of work is collaborating with other people, especially in environments that 
+foster challenge and creativity as well as safety and inclusivity. 
+
 </span>
 
 
-<br><br><br>
+<br><br><br><br><br>
 
-<span class = "hidden">Along with research, I like to play sports, explore tasty foods, and relax with video games.
+<span class = "hidden">Along with research, I like to play sports, try tasty foods, and relax with video games.
 </span>
 
 </p>
