--- a/work.html
+++ b/work.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>Raymond Wu</title>
-    <link href="https://fonts.googleapis.com/css2?family=Jost&family=DM+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="./style.css">
     <meta name="description" content="Hi there! I'm Raymond, a PhD student in Cognitive Science at the University of British Columbia.">
     <meta name="keywords" content="Raymond Wu">
@@ -15,8 +15,8 @@
         <ul class = "navlist" id = "nav">
           <li>
             <a href = "https://raymondwu.ca/" >RW</a></li>
-            <li><a href = "work">WORK</a></li>
-            <li><a href = "about">ABOUT</a></li>
+            <li><a href = "work">Work</a></li>
+            <li><a href = "about">About</a></li>
            <li><a href= "CV"
             target="_blank" rel = "noreferrer noopener"
             >CV</a></li>
