--- a/about.html
+++ b/about.html
@@ -2,8 +2,7 @@
 <head>
     <title>Raymond Wu</title>
 
-<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300" rel="stylesheet" type="text/css">
-
+    <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">    
         <link rel="stylesheet" href="./style.css">
     <meta name="description" content="Hi there! I'm Raymond, a PhD student in Cognitive Science at the University of British Columbia.">
     <meta name="keywords" content="Raymond Wu">
@@ -16,8 +15,8 @@
         <nav class = "nav">
           <ul class = "navlist" id = "nav">
             <li>
-              <a href = "https://raymondwu.ca/" >RW</a></li>
-              <li><a href = "work">Work</a></li>
+              <p id = "navname"><a href = "https://raymondwu.ca/" >Ray Wu</a></p></li>
+                <li><a href = "work">Work</a></li>
               <li><a href = "about">About</a></li>
              <li><a href= "CV"
               target="_blank" rel = "noreferrer noopener"
@@ -58,6 +57,8 @@ University of British Columbia, Vancouver.
  
 </p>
     </div>
+
+  
         </section>
 
 
@@ -72,32 +73,33 @@ University of British Columbia, Vancouver.
 <p id = "intro2_text">
 
 <span class = "hidden">
-<span id = "intro2_head">Drive & Direction</span> <br>
-My research aims to improve our understanding of human decision-making and behavior,
-reduce harms associated with digital products, and inform evidence-based policies.
+<span id = "intro2_head">Drive & Direction &#128640</span> <br>
+My goal is to advance our understanding of human behavior, 
+especially in the context of consuming addictive (digital) products, and to inform evidence-based policies.
 
-<br><br>
+<br><br><br>
 </span>
 
 <span class = "hidden">
-<span id = "intro2_head">Research Ethos</span><br>
+<span id = "intro2_head">Research Ethos &#128147</span><br>
 My work is rooted in rigour and transparency. This includes open science practices,
  having made our research and data 
  <a href= "https://www.osf.io/anm2z" target="_blank" rel = "noreferrer noopener" 
-class = "aboutlink">publicly available</a>, many of which are preregistered. <br> <br>
+class = "aboutlink">publicly available</a>, many of which are preregistered. <br> <br><br>
 </span>
 
 <span class = "hidden">
-<span id = "intro2_head">Working Together</span><br>
-One of my favorite part of work is collaborating with other people, especially in environments that 
-foster challenge and creativity as well as safety and inclusivity. 
-
+<span id = "intro2_head">Working Together &#129309</span><br>
+One of my favorite parts of work is collaborating
+ with other people, especially in environments that 
+foster challenge and creativity as well as safety and inclusion.
 </span>
 
 
-<br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
-<span class = "hidden">Along with research, I like to play sports, try tasty foods, and relax with video games.
+<span class = "hidden">Along with research, I enjoy playing sports, exploring tasty foods, 
+  and (trying to) relax with video games.
 </span>
 
 </p>
