--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <head>
     <title>Raymond Wu</title>
    
-<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300" rel="stylesheet" type="text/css">
-
-<link rel="stylesheet" href="./style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">    
+    <link rel="stylesheet" href="./style.css">
     <meta name="description" content="Hi there! I'm Raymond Wu, a PhD student in Cognitive Science,
     NSERC Doctoral Fellow, and member of the Centre for Gambling Research at the University of British Columbia.">
 </head>
@@ -16,8 +15,8 @@
             <nav class = "nav">
                 <ul class = "navlist" id = "nav">
                   <li>
-                    <a href = "https://raymondwu.ca/" >RW</a></li>
-                    <li><a href = "work">Work</a></li>
+                    <p id = "navname"><a href = "https://raymondwu.ca/" >Ray Wu</a></p></li>
+                      <li><a href = "work">Work</a></li>
                     <li><a href = "about">About</a></li>
                    <li><a href= "CV"
                     target="_blank" rel = "noreferrer noopener"
