--- a/news.html
+++ b/news.html
@@ -16,16 +16,7 @@
 
 <p class = infotext>
 
-Hi, I'm Ray!<br><br>
-I'm a cogntive scientist (well, a PhD student), an NSERC doctoral fellow, and a member of the 
-Centre for Gambling Research at UBC Vancouver. I'm originally from Toronto. <br><br>
-
-My work is rooted in transparency and rigour. This includes open science practices, having made our
- research and data are publicly available, many of which are also preregistered. <br><br>
-
-One of the best parts of research is collaborating with others. I strive to create
-environments that foster challenge and creativity as well as 
-safety and inclusion. 
+Coming soon
 
 </p>
 </div>
