--- a/news.html
+++ b/news.html
@@ -25,7 +25,7 @@ Coming soon
 </body>
 
 
-<div class="linkhome" onclick="window.location.href='home.html'"></div>
+<div class="linkhome" onclick="window.location.href='index.html'"></div>
 
 
 </html>
