--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <!--Boxes-->
 
     <div class="box box1">
-        <a href="work.html" rel="noopener noreferrer"> 
+        <a href="work" rel="noopener noreferrer"> 
             <img src="loss.png"></a>
         <p class="icontext">explore research</p></div>
 
