--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
         <p class="icontext">explore research</p></div>
 
     <div class="box box2">
-        <a href="news.html" rel="noopener noreferrer"> 
+        <a href="./news" rel="noopener noreferrer"> 
         <img src="heart.png"></a>
         <p class="icontext">what's new</p></div>
     
     <div class="box box3">
-        <a href="about.html" rel="noopener noreferrer"> 
+        <a href="./about" rel="noopener noreferrer"> 
             <img src="house.png"></a>
         <p class="icontext">about me</div>
 
