--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@ safety and inclusion.
 </body>
 
 
-<div class="linkhome" onclick="window.location.href='index.html'"></div>
+<div class="linkhome" onclick="window.location.href='index'"></div>
 
 
 </html>
