--- a/work.html
+++ b/work.html
@@ -36,7 +36,7 @@ My research training is funded by the Natural Sciences and Engineering Research 
 </body>
 
 
-<div class="linkhome" onclick="window.location.href='index.html'"></div>
+<div class="linkhome" onclick="window.location.href='index'"></div>
 
 
 </html>
