--- a/work.html
+++ b/work.html
@@ -16,17 +16,16 @@
 
 <p class = infotext>
 
-Today, we are exposed to more temptations than ever before. Products are engineered 
-to maximize company revenue even at the expense of consumers. 
+Today, we are exposed to more temptations than ever before, championed by digital technology. Products are engineered 
+to maximize company revenue at the expense of consumers. 
 Excessive consumption can pose significant harms to individuals, families, and society. <br><br>
 
-My research examines higher-order cognitions, including decision-making, cognitive control,
-and emotions in humans. For example, how do people interact with digital technology and what basic human processes can doing so reveal? <br><br>
-
-To this end, I adopt a strong quantitative stance. I utilize 1) advanded statistical modelling (but also simpler analyses), and 
+How do people interact with digital technology and what basic human processes does doing so reveal?
+ My research examines higher-order cognitions in people, including decision-making, emotions, and cognitive control. 
+ <br><br>
+ To this end, I utilize 1) advanded statistical modelling (but also simpler analyses), and 
 2) multi-method designs, such as by incorporating laboratory experiments with intensive longitudinal suveys.
-<br><br><br><br>
-
+<br><br>
 My research training is funded by the Natural Sciences and Engineering Research Council of Canada.
 
 </p>
@@ -36,7 +35,7 @@ My research training is funded by the Natural Sciences and Engineering Research 
 </body>
 
 
-<div class="linkhome" onclick="window.location.href='index'"></div>
+<div class="linkhome" onclick="window.location.href='/'"></div>
 
 
 </html>
