--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="navleft">
             <a href="https://scholar.google.ca/citations?user=zDk2hSMAAAAJ&hl=en&authuser=1" 
               class = linkhover target="_blank" rel="noopener noreferrer"> 
-                google scholar</a>
+                papers</a>
         </div>
         <div class="navcenter">
             <a href="#"></a> <!--Add full site link when ready-->
