--- a/work.html
+++ b/work.html
@@ -11,6 +11,7 @@
 
 <body>
 
+    <div class = "back_arrow">&#8592</div>
 
 <div class = "infotext_box">
 
@@ -20,8 +21,8 @@ Today, we are exposed to more temptations than ever before, championed by digita
 to maximize company revenue at the expense of consumers. 
 Excessive consumption can pose significant harms to individuals, families, and society. <br><br>
 
-How do people interact with digital technology and what basic human processes does doing so reveal?
  My research examines higher-order cognitions in people, including decision-making, emotions, and cognitive control. 
+ How do people interact with digital technology and what basic human processes does doing so reveal?
  <br><br>
  To this end, I utilize 1) advanded statistical modelling (but also simpler analyses), and 
 2) multi-method designs, such as by incorporating laboratory experiments with intensive longitudinal suveys.
