--- a/work.html
+++ b/work.html
@@ -17,15 +17,17 @@
 
 <p class = infotext>
 
-Today, we are exposed to more temptations than ever before, championed by digital technology. Products are engineered 
-to maximize company revenue at the expense of consumers. 
-Excessive consumption can pose significant harms to individuals, families, and society. <br><br>
+Nowadays, we are exposed to more temptations than ever before. Championed by digital technology, products are 
+engineered to maximize company revenue even at the expense of consumers. Excessive consumption can pose 
+significant harms to individuals, families, and society. <br><br>
 
- My research examines higher-order cognitions in people, including decision-making, emotions, and cognitive control. 
- How do people interact with digital technology and what basic human processes does doing so reveal?
+ My research examines higher-order cognitions that are involved in hedonic consumption, incuding 
+ decision-making processes, emotions, and cognitive control. Broadly, how do people interact with digital technology and what basic human processes does doing so reveal?
  <br><br>
- To this end, I utilize 1) advanded statistical modelling (but also simpler analyses), and 
-2) multi-method designs, such as by incorporating laboratory experiments with intensive longitudinal suveys.
+
+ To this end, I adopt a strong quantitative approach
+  and rely on human data. I utilize i. advanded statistical modelling (but also simpler analyses), and 
+ii. multi-method designs, such as by incorporating laboratory experiments with intensive longitudinal suveys.
 <br><br>
 My research training is funded by the Natural Sciences and Engineering Research Council of Canada.
 
