--- a/about.html
+++ b/about.html
@@ -4,9 +4,9 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style_info.css">
-    <meta name="description" content="Hi there! I'm Raymond, a PhD student in Cognitive Science at the University of British Columbia.">
+    <meta name="description" content="Hi there! I'm Raymond, a PhD student in Cognitive Science at the University of British Columbia, an NSERC doctoral fellow, and a member of the Centre for Gambling Research.">
     <meta name="keywords" content="Raymond Wu">
-    <link rel="icon" href="android-chrome-512x512.png" type="image/png">
+    <link rel="icon" href="book.png" type="image/png">
 </head>
 
 <body>
@@ -18,15 +18,17 @@
 <p class = infotext>
 
 Hi, I'm Ray!<br><br>
-I'm a cogntive scientist (well, a PhD student), an NSERC doctoral fellow, and a member of the 
+I'm a cogntive scientist, an NSERC doctoral fellow, and a member of the 
 Centre for Gambling Research at UBC Vancouver - Originally from Toronto. <br><br>
 
-My work is rooted in transparency and rigour. This includes open science practices, having made our
-research and data publicly available, many of which are also preregistered. <br><br>
+My research is rooted in rigour and transparency. This includes open science practices, having made our
+research and data publicly available, many of which are preregistered. <br><br>
 
-One of the best parts of research is collaborating with others. Thus, I strive to create
+One of the best parts of work is collaborating with others. I thus strive to create
 environments that foster challenge and creativity as well as 
-safety and inclusion. 
+safety and inclusion. <br><br>
+
+Many thanks for visiting! :)
 
 </p>
 </div>
