--- a/news.html
+++ b/news.html
@@ -4,9 +4,9 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style_info.css">
-    <meta name="description" content="Hi there! I'm Raymond, a PhD student in Cognitive Science at the University of British Columbia.">
+    <meta name="description" content="Hi there! I'm Raymond, a PhD student in Cognitive Science at the University of British Columbia, an NSERC doctoral fellow, and a member of the Centre for Gambling Research.">
     <meta name="keywords" content="Raymond Wu">
-    <link rel="icon" href="android-chrome-512x512.png" type="image/png">
+    <link rel="icon" href="book.png" type="image/png">
 </head>
 
 <body>
