--- a/work.html
+++ b/work.html
@@ -4,9 +4,9 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style_info.css">
-    <meta name="description" content="Hi there! I'm Raymond, a PhD student in Cognitive Science at the University of British Columbia.">
+    <meta name="description" content="Hi there! I'm Raymond, a PhD student in Cognitive Science at the University of British Columbia, an NSERC doctoral fellow, and a member of the Centre for Gambling Research.">
     <meta name="keywords" content="Raymond Wu">
-    <link rel="icon" href="android-chrome-512x512.png" type="image/png">
+    <link rel="icon" href="book.png" type="image/png">
 </head>
 
 <body>
@@ -17,15 +17,16 @@
 
 <p class = infotext>
 
-Nowadays, we are exposed to more temptations than ever before. Championed by digital technology, products are 
-engineered to maximize company revenue even at the expense of consumers. Excessive consumption can pose 
+Nowadays, we're exposed to more temptations than ever before. Championed by digital technology, products are 
+engineered to maximize company revenue even if excessive consumption can pose
 significant harms to individuals, families, and society. <br><br>
 
- My research examines higher-order cognitions that are involved in hedonic consumption, incuding 
- decision-making processes, emotions, and cognitive control. Broadly, how do people interact with digital technology and what basic human processes does doing so reveal?
+ My research examines higher-order cognitions involved in hedonic consumption, incuding 
+ decision-making processes, emotions, and cognitive control. Broadly, I'm interested in
+ how people interact with digital technology and the basic processes that these interactions reveal.
  <br><br>
 
- To this end, I adopt a strong quantitative approach
+ To this end, I take a strong quantitative approach
   and rely on human data. I utilize i. advanded statistical modelling (but also simpler analyses), and 
 ii. multi-method designs, such as by incorporating laboratory experiments with intensive longitudinal suveys.
 <br><br>
