--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
         <a href="https://ca.linkedin.com/in/raymondwu01" 
           class = linkhover target="_blank" rel="noopener noreferrer"> 
             l i n k e d i n </a>
-            &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp 
+            &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
             <a href="https://twitter.com/rayrwu" 
               class = linkhover target="_blank" rel="noopener noreferrer"> 
                 t w i t t e r</a>
-            &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp 
+            &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
             <a href="mailto:rwu@psych.ubc.ca" 
                class = linkhover target="_blank" rel="noopener noreferrer"> 
                 e m a i l </a>
