--- a/about.html
+++ b/about.html
@@ -24,11 +24,12 @@ Centre for Gambling Research at UBC Vancouver - Originally from Toronto. <br><br
 My research is rooted in rigour and transparency. This includes open science practices, having made our
 research and data publicly available, many of which are preregistered. <br><br>
 
-One of the best parts of work is collaborating with others. I strive to create
-environments that foster challenge and creativity as well as 
-safety and inclusion. <br><br>
+One of the best parts of work is collaborating with others. I enjoy working in, and 
+strive to create
+environments that, foster challenge and creativity as well as 
+safety and inclusivity. <br><br>
 
-Thanks for visiting! :)
+Thanks for visiting and feel free to reach out! 😊
 
 </p>
 </div>
