--- a/work.html
+++ b/work.html
@@ -17,18 +17,20 @@
 
 <p class = infotext>
 
-Nowadays, we're exposed to more temptations than ever before. Championed by digital technology, products are 
-engineered to maximize company revenue even if excessive consumption can pose
-significant harms to individuals, families, and society. <br><br>
+Today, we're exposed to more temptations than ever before. Championed by digital technology, products
+ are designed to maximize consumer engagement (corporate profits) even when overconsumption can incur 
+ potential harms to individuals, families, and society. <br><br>
 
- My research examines higher-order cognitions involved in hedonic consumption, incuding 
- decision-making processes, emotions, and cognitive control. Broadly, I'm interested in
- how people interact with digital technology and the basic processes that these interactions reveal.
+ My research explores higher-order cognitions underlying hedonic consumption, incuding 
+ decision-making, emotions, and cognitive control. Broadly, I investigate how and why people interact 
+ with digital technology and what these interactions reveal about
+ fundamental cognitive processes in humans.
+ 
  <br><br>
 
- To this end, I take a strong quantitative approach
-  and rely on human data. I utilize i. advanded statistical modelling (but also simpler analyses), and 
-ii. multi-method designs, such as by incorporating laboratory experiments with intensive longitudinal suveys.
+ To this end, I adopt a rigorous quantitative approach, relying 
+ on human data. My research employs i. advanded statistical modelling (alongside simpler analyses) and 
+ii. multi-method research designs, integrating laboratory experiments with intensive longitudinal surveys.
 <br><br>
 My research training is funded by the Natural Sciences and Engineering Research Council of Canada.
 
