--- a/work.html
+++ b/work.html
@@ -17,11 +17,11 @@
 
 <p class = infotext>
 
-Today, we're exposed to more temptations than ever before. Championed by digital technology, products
- are designed to maximize consumer engagement (corporate profits) even when overconsumption can incur 
- potential harms to individuals, families, and society. <br><br>
+Today, we're exposed to more temptations than ever before. Fueled by digital technology, products
+ are designed to maximize consumer engagement (i.e., corporate profits) with little to no accountability for the potential harms they may
+ cause to individuals, families, or society. <br><br>
 
- My research explores higher-order cognitions underlying hedonic consumption, incuding 
+ My research explores higher-order cognitions underlying hedonic consumption, including 
  decision-making, emotions, and cognitive control. Broadly, I investigate how and why people interact 
  with digital technology and what these interactions reveal about
  fundamental cognitive processes in humans.
