--- a/work.html
+++ b/work.html
@@ -18,7 +18,7 @@
 <p class = infotext>
 
 Today, we're exposed to more temptations than ever before. Fueled by digital technology, products
- are designed to maximize consumer engagement (i.e., corporate profits) with little to no accountability for the potential harms they may
+ are designed to maximize consumer engagement with little to no accountability for the potential harms they may
  cause to individuals, families, or society. <br><br>
 
  My research explores higher-order cognitions underlying hedonic consumption, including 
