--- a/news.html
+++ b/news.html
@@ -18,7 +18,12 @@
     
 <p class = infotext>
 
-Coming soon
+New paper on 21-day daily diary on gamblers trying to reduce theri gambling + 
+links with licensing effect, affect, and self-control: 
+<a class="newlink linkhover" href="https://www.tandfonline.com/doi/epdf/10.1080/16066359.2025.2486964?needAccess=true" target="_blank" rel="noopener noreferrer">
+    LINK
+  </a>
+  
 
 </p>
 </div>
