--- a/work.html
+++ b/work.html
@@ -21,18 +21,19 @@ Today, we're exposed to more temptations than ever before. Fueled by digital tec
  are designed to maximize consumer engagement with little to no accountability for the potential harms they may
  cause to individuals, families, or society. <br><br>
 
- My research explores higher-order cognitions underlying hedonic consumption, including 
- decision-making, emotions, and cognitive control. Broadly, I investigate how and why people interact 
+ My research interests are on higher-order cognitions, such as decision-making, emotions, and 
+ cognitive control, that underly hedonic consumption. Broadly, I'm interested in how and why people interact 
  with digital technology and what these interactions reveal about
- fundamental cognitive processes in humans.
+ fundamental cognitive processes in humans. In particular, my PhD focuses on modern gambling products.
  
  <br><br>
 
- To this end, I adopt a rigorous quantitative approach, relying 
+ To this end, I adopt a strong quantitative approach that rely on
  on human data. My research employs i. advanded statistical modelling (alongside simpler analyses) and 
-ii. multi-method research designs, integrating laboratory experiments with intensive longitudinal surveys.
+ii. a multi-method approach, integrating laboratory experiments with intensive longitudinal surveys.
 <br><br>
-My research training is funded by the Natural Sciences and Engineering Research Council of Canada.
+My PhD research training is funded by the Natural Sciences and Engineering Research Council of Canada
+and the Centre for Gambling Research at UBC.
 
 </p>
 </div>
