--- a/about.html
+++ b/about.html
@@ -19,15 +19,15 @@
 
 Hi, I'm Ray!<br><br>
 I'm a cogntive scientist, an NSERC doctoral fellow, and a member of the 
-Centre for Gambling Research at UBC Vancouver - Originally from Toronto. <br><br>
+Centre for Gambling Research at UBC Vancouver - Originally I'm from Toronto. <br><br>
 
-My research is rooted in rigour and transparency. This includes open science practices, having made our
-research and data publicly available, many of which are preregistered. <br><br>
+My research is rooted in rigour and transparency. This includes adopting
+open science practices, having preregistered many of our studies and making
+ much of our data publicy available.<br><br>
 
-One of the best parts of work is collaborating with others. I enjoy working in and 
-strive to create
+One of my favourite parts of work is collaborating with other people. I enjoy working in, and strive to create,
 environments that foster challenge and creativity as well as 
-safety and inclusivity. <br><br>
+safety and inclusivion. <br><br>
 
 Thanks for visiting and feel free to reach out! 😊
 
