--- a/about.html
+++ b/about.html
@@ -19,15 +19,23 @@
 
 Hi, I'm Ray!<br><br>
 I'm a cogntive scientist, an NSERC doctoral fellow, and a member of the 
-Centre for Gambling Research at UBC Vancouver - Originally I'm from Toronto. <br><br>
+Centre for Gambling Research at UBC Vancouver (who came from Toronto). <br><br>
 
-My research is rooted in rigour and transparency. This includes adopting
-open science practices, having preregistered many of our studies and making
- much of our data publicy available.<br><br>
 
-One of my favourite parts of work is collaborating with other people. I enjoy working in, and strive to create,
+ My research interests are on higher-order cognitions, such as decision-making and emotions, and interactions between people
+and digital technology. My PhD focuses on modern gambling products.
+<br><br>
+
+To this end, my research adopts a quantiative perspective and employs a multi-method approach, integrating laboratory experiments with 
+intensive longitudinal surveys. <br><br>
+
+My research ethos is rooted in rigour and transparency. I value and exercise healthy research practices. This includes adopting
+open science practices, such as preregistration and making
+ our data publicy available.<br><br>
+
+One of my favourite parts of work is collaborating with other people. I enjoy working in and strive to create
 environments that foster challenge and creativity as well as 
-safety and inclusivion. <br><br>
+safety and inclusion. <br><br>
 
 Thanks for visiting and feel free to reach out! 😊
 
