--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="navleft">
             <a href="https://scholar.google.ca/citations?user=zDk2hSMAAAAJ&hl=en&authuser=1" 
               class = linkhover target="_blank" rel="noopener noreferrer"> 
-                p a p e r s</a>
+                g o o g l e &nbsp s c h o l a r</a>
         </div>
         <div class="navcenter">
             <a href="#"></a> <!--Add full site link when ready-->
@@ -51,11 +51,15 @@
         <a href="https://ca.linkedin.com/in/raymondwu01" 
           class = linkhover target="_blank" rel="noopener noreferrer"> 
             l i n k e d i n </a>
-            &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-            <a href="https://twitter.com/rayrwu" 
-              class = linkhover target="_blank" rel="noopener noreferrer"> 
-                t w i t t e r</a>
-            &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+            &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+
+            <a href="https://bsky.app/profile/raymondwu.bsky.social" 
+            class = linkhover target="_blank" rel="noopener noreferrer"> 
+              b l u e s k y </a>
+              &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+  
+
+      
             <a href="mailto:rwu@psych.ubc.ca" 
                class = linkhover target="_blank" rel="noopener noreferrer"> 
                 e m a i l </a>
