--- a/work.html
+++ b/work.html
@@ -16,24 +16,8 @@
 <div class = "infotext_box">
 
 <p class = infotext>
+Coming soon
 
-Today, we're exposed to more temptations than ever before. Fueled by digital technology, products
- are designed to maximize consumer engagement with little to no accountability for the potential harms they may
- cause to individuals, families, or society. <br><br>
-
- My research interests are on higher-order cognitions, such as decision-making, emotions, and 
- cognitive control, that underly hedonic consumption. Broadly, I'm interested in how and why people interact 
- with digital technology and what these interactions reveal about
- fundamental cognitive processes in humans. In particular, my PhD focuses on modern gambling products.
- 
- <br><br>
-
- To this end, I adopt a strong quantitative approach that rely on
- on human data. My research employs i. advanded statistical modelling (alongside simpler analyses) and 
-ii. a multi-method approach, integrating laboratory experiments with intensive longitudinal surveys.
-<br><br>
-My PhD research training is funded by the Natural Sciences and Engineering Research Council of Canada
-and the Centre for Gambling Research at UBC.
 
 </p>
 </div>
