--- a/about.html
+++ b/about.html
@@ -19,23 +19,18 @@
 
 Hi, I'm Ray!<br><br>
 I'm a cogntive scientist, an NSERC doctoral fellow, and a member of the 
-Centre for Gambling Research at UBC Vancouver (who came from Toronto). <br><br>
+Centre for Gambling Research at UBC Vancouver. <br><br>
 
 
  My research interests are on higher-order cognitions, such as decision-making and emotions, and interactions between people
 and digital technology. My PhD focuses on modern gambling products.
 <br><br>
 
-To this end, my research adopts a quantiative perspective and employs a multi-method approach, integrating laboratory experiments with 
+To this end, I adopt a quantiative perspective and employ a multi-method approach, integrating laboratory experiments with 
 intensive longitudinal surveys. <br><br>
 
-My research ethos is rooted in rigour and transparency. I value and exercise healthy research practices. This includes adopting
-open science practices, such as preregistration and making
- our data publicy available.<br><br>
-
-One of my favourite parts of work is collaborating with other people. I enjoy working in and strive to create
-environments that foster challenge and creativity as well as 
-safety and inclusion. <br><br>
+My goal is to produce work that is rigorous, transparent, and (hopefully) innovative. This includes incoporating
+ open science practices such as preregistration and making data and code publicly available.<br><br>
 
 Thanks for visiting and feel free to reach out! 😊
 
